--- a/deno.json
+++ b/deno.json
@@ -7,12 +7,7 @@
     "llm": "bash utils/repo.sh"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "@types/node": "npm:@types/node@^22.14.0",
-    "canvas": "npm:canvas@^3.1.0",
-    "gifencoder": "npm:gifencoder@^2.0.1",
-    "jimp": "npm:jimp@^1.6.0",
-    "typescript": "npm:typescript@^5.8.3"
+    "@std/assert": "jsr:@std/assert@1"
   },
   "nodeModulesDir": "auto"
 }
