chore(deno.json): add lint & fmt config
- Introduced formatting options including tab usage, line width, and indentation settings.
- Configured linting rules to enforce best practices in TypeScript files within the `src/` directory.
- Specified rules for code quality, including checks for equality, function return types, and variable declarations.

--- a/deno.json
+++ b/deno.json
@@ -9,5 +9,38 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   },
-  "nodeModulesDir": "auto"
+  "nodeModulesDir": "auto",
+  "fmt": {
+    "useTabs": false,
+    "lineWidth": 80,
+    "indentWidth": 4,
+    "semiColons": true,
+    "singleQuote": true,
+    "include": ["src/"]
+  },
+  "lint": {
+    "include": ["src/**/*.ts"],
+    "rules": {
+      "tags": ["recommended"],
+      "include": [
+        "eqeqeq",
+        "explicit-function-return-type",
+        "explicit-module-boundary-types",
+        "no-boolean-literal-for-arguments",
+        "no-const-assign",
+        "no-eval",
+        "no-non-null-asserted-optional-chain",
+        "no-non-null-assertion",
+        "no-self-compare",
+        "no-sparse-arrays",
+        "no-sync-fn-in-async-fn",
+        "no-throw-literal",
+        "no-top-level-await",
+        "no-undef",
+        "no-useless-rename",
+        "prefer-ascii",
+        "single-var-declarator"
+      ]
+    }
+  }
 }
