--- a/deno.json
+++ b/deno.json
@@ -3,13 +3,14 @@
     "dev": "deno run --watch main.ts",
     "dev:example": "deno run --allow-ffi --allow-read --allow-write example.ts",
     "tidy": "deno fmt && deno lint",
-    "test": "deno test --allow-ffi --allow-read --allow-write",
-    "llm": "bash utils/repo.sh"
+    "test": "deno test --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts",
+    "llm": "bash utils/repo.sh",
+    "npm:setup": "deno cache --node-modules-dir npm:canvas@3.1.0 npm:gifencoder@2.0.1 npm:jimp@1.6.0 --reload"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   },
-  "nodeModulesDir": "auto",
+  "nodeModulesDir": true,
   "fmt": {
     "useTabs": false,
     "lineWidth": 80,
