--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,7 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   },
-  "nodeModulesDir": true,
+  "nodeModulesDir": "auto",
   "fmt": {
     "useTabs": false,
     "lineWidth": 80,
