--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -22,15 +22,6 @@ jobs:
         with:
           deno-version: v2.x
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install Node.js dependencies
-        run: npm install
-
       - name: Cache Deno dependencies
         uses: actions/cache@v4
         with:
@@ -39,13 +30,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-deno-
 
-      # Install build tools needed for canvas
-      - name: Install build dependencies
+      # Install system dependencies required for canvas
+      - name: Install system dependencies for canvas
         run: |
           sudo apt-get update
-          sudo apt-get install build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
+          sudo apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
 
-      - name: Setup npm cache for Deno
+      # Instead of using npm directly, we'll use Deno's npm compatibility
+      - name: Setup npm packages with Deno
         run: deno task npm:setup
 
       - name: Check formatting
