fix(ci): update Deno test command syntax

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -50,7 +50,7 @@ jobs:
 
       # Modify the test command to ignore npm modules
       - name: Run tests with coverage
-        run: deno test --no-check=npm: --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=coverage
+        run: "deno test --no-check npm: --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=coverage"
 
       - name: Generate coverage report
         run: deno coverage --lcov coverage > coverage.lcov
