--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -12,8 +12,7 @@ jobs:
 
     env:
       DENO_DIR: .deno_cache
-      # Skip test files in the npm packages
-      DENO_SKIP_TEST_PATTERNS: "@jimp/,npm:"
+      DENO_SKIP_TEST_PATTERNS: "**/npm/**,**/@jimp/**,**/registry.npmjs.org/**"
 
     steps:
       - name: Checkout repository
@@ -48,7 +47,7 @@ jobs:
       - name: Lint code
         run: deno lint
 
-      # Modify the test command to ignore npm modules
+      # Run tests with coverage
       - name: Run tests with coverage
         run: "deno test --no-check --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=coverage"
 
