--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -49,7 +49,7 @@ jobs:
 
       # Run tests with coverage
       - name: Run tests with coverage
-        run: "deno test --no-check --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=coverage"
+        run: "deno test --no-check --exclude=.deno_cache --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=coverage"
 
       - name: Generate coverage report
         run: deno coverage --lcov coverage > coverage.lcov
