chore(ci): update CodeQL workflow name and be more consistent with the output path
- Changed the name of the CodeQL workflow for clarity.
- Updated the Deno test command to specify the coverage output path as 'cov' instead of 'coverage'.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: 🚓 Análisis de código
+name: CodeQL
 
 on:
   workflow_dispatch:
@@ -8,7 +8,6 @@ on:
 
 jobs:
   analyze:
-    name: Analizar
     runs-on: ubuntu-latest
     permissions:
       actions: read
