chore(ci): update Codecov actions in Deno workflow to v5 and add test results upload

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -51,7 +51,14 @@ jobs:
         run: deno coverage --lcov cov > coverage.lcov
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
-          file: ./coverage.lcov
-          fail_ci_if_error: false
+          files: ./coverage.lcov
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          files: ./coverage.lcov
+          token: ${{ secrets.CODECOV_TOKEN }}
