--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "canvas": "^3.1.0",
     "gifencoder": "^2.0.1",
     "jimp": "^1.6.0",
+    "sharp": "^0.34.1",
     "typescript": "^5.8.3"
   }
 }
