--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,9 @@
     "llm": "bash utils/repo.sh"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/fs": "jsr:@std/fs@^1.0.16",
+    "@std/path": "jsr:@std/path@^1.0.8"
   },
   "nodeModulesDir": "auto",
   "fmt": {
