--- a/deno.json
+++ b/deno.json
@@ -7,9 +7,10 @@
     "llm": "bash utils/repo.sh"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
+    "@std/assert": "jsr:@std/assert@^1.0.12",
     "@std/fs": "jsr:@std/fs@^1.0.16",
-    "@std/path": "jsr:@std/path@^1.0.8"
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.11"
   },
   "nodeModulesDir": "auto",
   "fmt": {
