--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,16 @@
 {
   "tasks": {
     "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
-    "dev:example": "deno run --allow-ffi --allow-read --allow-write example/main.ts",
+    "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
     "tidy": "deno fmt && deno lint",
     "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts",
     "llm": "bash utils/repo.sh"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@^1.0.12",
+    "@std/fs": "jsr:@std/fs@^1.0.16",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.11"
   },
   "nodeModulesDir": "auto",
   "fmt": {
