chore(dependencies): update Deno lockfile to include @std/async@1.0.12 and remove jimp@1.6.0 from package.json

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -36,7 +36,7 @@ jobs:
           sudo apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
 
       - name: Setup npm packages with Deno
-        run: deno cache --node-modules-dir --no-check npm:canvas@3.1.0 npm:gifencoder@2.0.1 npm:jimp@1.6.0 --reload
+        run: deno cache --node-modules-dir --no-check npm:canvas@3.1.0 npm:gifencoder@2.0.1 --reload
 
       - name: Check formatting
         run: deno fmt --check
