--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,8 @@
     "@std/fs": "jsr:@std/fs@^1.0.16",
     "@std/io": "jsr:@std/io@^0.225.2",
     "@std/path": "jsr:@std/path@^1.0.8",
-    "@std/testing": "jsr:@std/testing@^1.0.11"
+    "@std/testing": "jsr:@std/testing@^1.0.11",
+    "@/": "./src/"
   },
   "nodeModulesDir": "auto",
   "fmt": {
