chore(.gitignore): add XML files to ignore list; chore(deno.json): update test command to include JUnit reporter and output path; docs(readme): add Codecov badge for coverage tracking

--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,7 @@
     "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
     "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
     "tidy": "deno fmt && deno lint",
-    "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts",
+    "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --reporter=junit --junit-path=./report.xml",
     "llm": "bash utils/repo.sh"
   },
   "imports": {
