--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,31 +1,31 @@
 name: CodeQL
 
 on:
-  workflow_dispatch:
-  push:
-    branches: [master]
-  pull_request:
+    workflow_dispatch:
+    push:
+        branches: [master]
+    pull_request:
 
 jobs:
-  analyze:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+    analyze:
+        runs-on: ubuntu-latest
+        permissions:
+            actions: read
+            contents: read
+            security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ["javascript"]
+        strategy:
+            fail-fast: false
+            matrix:
+                language: ['javascript']
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@v3
 
-      - uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
+            - uses: github/codeql-action/init@v3
+              with:
+                  languages: ${{ matrix.language }}
 
-      - uses: github/codeql-action/autobuild@v3
+            - uses: github/codeql-action/autobuild@v3
 
-      - uses: github/codeql-action/analyze@v3
+            - uses: github/codeql-action/analyze@v3
