--- a/deno.json
+++ b/deno.json
@@ -1,59 +1,58 @@
 {
-  "name": "@dv/image-generation",
-  "version": "1.0.0",
-  "description": "A TypeScript library for image transformations built with Deno",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/totallynotdavid/image-generation"
-  },
-  "tasks": {
-    "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
-    "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
-    "tidy": "deno fmt && deno lint",
-    "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --reporter=junit --junit-path=./report.xml",
-    "llm": "bash utils/repo.sh"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.12",
-    "@std/fs": "jsr:@std/fs@^1.0.16",
-    "@std/io": "jsr:@std/io@^0.225.2",
-    "@std/path": "jsr:@std/path@^1.0.8",
-    "@std/testing": "jsr:@std/testing@^1.0.11",
-    "@/": "./src/"
-  },
-  "nodeModulesDir": "auto",
-  "fmt": {
-    "useTabs": false,
-    "lineWidth": 80,
-    "indentWidth": 4,
-    "semiColons": true,
-    "singleQuote": true,
-    "include": ["src/"]
-  },
-  "lint": {
-    "include": ["src/**/*.ts"],
-    "rules": {
-      "tags": ["recommended"],
-      "include": [
-        "eqeqeq",
-        "explicit-function-return-type",
-        "explicit-module-boundary-types",
-        "no-boolean-literal-for-arguments",
-        "no-const-assign",
-        "no-eval",
-        "no-non-null-asserted-optional-chain",
-        "no-non-null-assertion",
-        "no-self-compare",
-        "no-sparse-arrays",
-        "no-sync-fn-in-async-fn",
-        "no-throw-literal",
-        "no-top-level-await",
-        "no-undef",
-        "no-useless-rename",
-        "prefer-ascii",
-        "single-var-declarator"
-      ]
+    "version": "1.0.0",
+    "description": "A TypeScript library for image transformations built with Deno",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/totallynotdavid/image-generation"
+    },
+    "tasks": {
+        "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
+        "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
+        "tidy": "deno fmt && deno lint",
+        "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --junit-path=./report.xml",
+        "llm": "bash utils/repo.sh"
+    },
+    "imports": {
+        "@std/assert": "jsr:@std/assert@^1.0.12",
+        "@std/fs": "jsr:@std/fs@^1.0.16",
+        "@std/io": "jsr:@std/io@^0.225.2",
+        "@std/path": "jsr:@std/path@^1.0.8",
+        "@std/testing": "jsr:@std/testing@^1.0.11",
+        "@/": "./src/"
+    },
+    "nodeModulesDir": "auto",
+    "fmt": {
+        "useTabs": false,
+        "lineWidth": 80,
+        "indentWidth": 4,
+        "semiColons": true,
+        "singleQuote": true,
+        "include": ["src/"]
+    },
+    "lint": {
+        "include": ["src/**/*.ts"],
+        "rules": {
+            "tags": ["recommended"],
+            "include": [
+                "eqeqeq",
+                "explicit-function-return-type",
+                "explicit-module-boundary-types",
+                "no-boolean-literal-for-arguments",
+                "no-const-assign",
+                "no-eval",
+                "no-non-null-asserted-optional-chain",
+                "no-non-null-assertion",
+                "no-self-compare",
+                "no-sparse-arrays",
+                "no-sync-fn-in-async-fn",
+                "no-throw-literal",
+                "no-top-level-await",
+                "no-undef",
+                "no-useless-rename",
+                "prefer-ascii",
+                "single-var-declarator"
+            ]
+        }
     }
-  }
 }
