chore(build): add build_npm script for packaging and update deno.json with build task; modify .gitignore to exclude build directory

--- a/deno.json
+++ b/deno.json
@@ -4,14 +4,15 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/totallynotdavid/image-generation"
+        "url": "git+https://github.com/totallynotdavid/image-generation.git"
     },
     "tasks": {
         "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
         "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
         "tidy": "deno fmt && deno lint",
         "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --junit-path=./report.xml",
-        "llm": "bash utils/repo.sh"
+        "llm": "bash utils/repo.sh",
+        "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
         "@std/assert": "jsr:@std/assert@^1.0.12",
@@ -19,6 +20,7 @@
         "@std/io": "jsr:@std/io@^0.225.2",
         "@std/path": "jsr:@std/path@^1.0.8",
         "@std/testing": "jsr:@std/testing@^1.0.11",
+        "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
         "@/": "./src/"
     },
     "nodeModulesDir": "auto",
