--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -45,20 +45,21 @@ jobs:
               run: deno lint
 
             - name: Run tests with coverage
-              run: deno test tests --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=cov
+              run: deno test tests --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=cov --junit-path=./junit.xml
 
             - name: Generate coverage report
               run: deno coverage --lcov cov > coverage.lcov
 
-            - name: Upload coverage to Codecov
-              uses: codecov/codecov-action@v5
-              with:
-                  files: ./coverage.lcov
-                  token: ${{ secrets.CODECOV_TOKEN }}
-
             - name: Upload test results to Codecov
               if: ${{ !cancelled() }}
               uses: codecov/test-results-action@v1
+              with:
+                  files: ./junit.xml
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  name: deno-test-results
+
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v5
               with:
                   files: ./coverage.lcov
                   token: ${{ secrets.CODECOV_TOKEN }}
