ci(codecov): update Codecov configuration to enhance layout comment

--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,5 +1,9 @@
 comment:
-    layout: 'header, diff, flags, components'
+    layout: 'condensed_header, diff, flags, components, condensed_files, condensed_footer'
+    behavior: default
+    require_base: true
+    require_head: true
+    hide_project_coverage: false
 
 component_management:
     default_rules:
