--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,9 @@
 {
+    "name": "@dv/image-generation",
     "version": "1.0.0",
     "description": "A TypeScript library for image transformations built with Deno",
     "license": "MIT",
+    "exports": "./src/index.ts",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/totallynotdavid/image-generation.git"
