--- a/deno.json
+++ b/deno.json
@@ -18,12 +18,11 @@
         "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
-        "@std/assert": "jsr:@std/assert@^1.0.12",
-        "@std/fs": "jsr:@std/fs@^1.0.16",
-        "@std/io": "jsr:@std/io@^0.225.2",
-        "@std/path": "jsr:@std/path@^1.0.8",
-        "@std/testing": "jsr:@std/testing@^1.0.11",
-        "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+        "@std/assert": "jsr:@std/assert@1.0.12",
+        "@std/fs": "jsr:@std/fs@1.0.16",
+        "@std/path": "jsr:@std/path@1.0.8",
+        "@std/testing": "jsr:@std/testing@1.0.11",
+        "@deno/dnt": "jsr:@deno/dnt@0.41.3",
         "@/": "./src/"
     },
     "nodeModulesDir": "auto",
