--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "Image generation project using Deno",
     "private": true,
     "dependencies": {
-        "@types/node": "^22.14.0",
-        "canvas": "^3.1.0",
-        "gifencoder": "^2.0.1",
-        "sharp": "^0.34.1",
+        "@types/node": "22.14.0",
+        "canvas": "3.1.0",
+        "gifencoder": "2.0.1",
+        "sharp": "0.34.1",
         "typescript": "^5.8.3"
     }
 }
