fix(build_npm): import directly in asset-resolver (from @std/fs to @std/fs/exists) (#9)
* chore(dependencies): update import statements to use specific version of @std/assert for consistency

* chore(dependencies): use specific package versions in deno.json and package.json for consistency

* docs(readme): update package title with JSR badge for visibility

* update build_npm.ts to use latest import syntax and update deno.json to include additional publish settings and linting paths

* chore(dependencies): update import statements to use latest package syntax for consistency

* chore(imports): use single quotes

* fix(build): using @std/fs/exists fixes the build for node

* chore(dependencies): add @types/node@22.12.0 and update undici-types versions in deno.lock

* chore(dependencies): upgrade @types/node to 22.14.0

* bump(version): building with npm is now passing

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "name": "@dv/image-generation",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "A TypeScript library for image transformations built with Deno",
     "license": "MIT",
     "exports": "./src/index.ts",
@@ -18,13 +18,15 @@
         "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
-        "@std/assert": "jsr:@std/assert@^1.0.12",
-        "@std/fs": "jsr:@std/fs@^1.0.16",
-        "@std/io": "jsr:@std/io@^0.225.2",
-        "@std/path": "jsr:@std/path@^1.0.8",
-        "@std/testing": "jsr:@std/testing@^1.0.11",
-        "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+        "@std/assert": "jsr:@std/assert@1.0.12",
+        "@std/fs": "jsr:@std/fs@1.0.16",
+        "@std/path": "jsr:@std/path@1.0.8",
+        "@std/testing": "jsr:@std/testing@1.0.11",
+        "@deno/dnt": "jsr:@deno/dnt@0.41.3",
         "@/": "./src/"
+    },
+    "publish": {
+        "include": ["src", "license", "readme.md"]
     },
     "nodeModulesDir": "auto",
     "fmt": {
@@ -33,10 +35,10 @@
         "indentWidth": 4,
         "semiColons": true,
         "singleQuote": true,
-        "include": ["src/"]
+        "include": ["src/", "example/", "tests/", ".github/", "readme.md"]
     },
     "lint": {
-        "include": ["src/**/*.ts"],
+        "include": ["src/**/*.ts", "example/**/*.ts"],
         "rules": {
             "tags": ["recommended"],
             "include": [
