--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Set env
               run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -25,7 +25,7 @@ jobs:
                   deno-version: v2.x
 
             - name: Publish to jsr
-              run: npx jsr publish
+              run: deno publish
 
             - name: Build npm package
               run: deno run -A build_npm.ts $RELEASE_VERSION
