chore(deno.json): update publish settings to exclude src/assets from inclusion

--- a/deno.json
+++ b/deno.json
@@ -26,7 +26,8 @@
         "@/": "./src/"
     },
     "publish": {
-        "include": ["src", "license", "readme.md"]
+        "include": ["src", "license", "readme.md"],
+        "exclude": ["src/assets"]
     },
     "nodeModulesDir": "auto",
     "fmt": {
