--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Image generation project using Deno",
     "private": true,
     "dependencies": {
+        "@types/gifencoder": "^2.0.3",
         "@types/node": "22.15.17",
         "canvas": "3.1.0",
         "gifencoder": "2.0.1",
