--- a/deno.json
+++ b/deno.json
@@ -13,7 +13,7 @@
         "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
         "dev:example": "deno run --allow-read --allow-write --allow-env --allow-ffi example/main.ts",
         "tidy": "deno fmt . && deno lint src/ example/",
-        "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --junit-path=./report.xml",
+        "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --allow-env --junit-path=./report.xml",
         "llm": "bash utils/repo.sh",
         "build:npm": "deno run -A build_npm.ts"
     },
