--- a/deno.json
+++ b/deno.json
@@ -18,6 +18,7 @@
         "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
+        "@matmen/imagescript": "jsr:@matmen/imagescript@^1.3.1",
         "@std/assert": "jsr:@std/assert@1.0.12",
         "@std/fs": "jsr:@std/fs@1.0.16",
         "@std/path": "jsr:@std/path@1.0.8",
