--- a/deno.json
+++ b/deno.json
@@ -18,12 +18,13 @@
         "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
+        "@deno/dnt": "jsr:@deno/dnt@0.41.3",
         "@matmen/imagescript": "jsr:@matmen/imagescript@^1.3.1",
+        "@temelj/color": "jsr:@temelj/color@^0.7.0",
         "@std/assert": "jsr:@std/assert@1.0.12",
         "@std/fs": "jsr:@std/fs@1.0.16",
         "@std/path": "jsr:@std/path@1.0.8",
         "@std/testing": "jsr:@std/testing@1.0.11",
-        "@deno/dnt": "jsr:@deno/dnt@0.41.3",
         "@/": "./src/"
     },
     "publish": {
