--- a/deno.json
+++ b/deno.json
@@ -13,13 +13,14 @@
         "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
         "dev:example": "deno run --allow-read --allow-write --allow-net example/main.ts",
         "tidy": "deno fmt . && deno lint src/ example/",
-        "test": "deno test --allow-ffi --allow-read --allow-write --allow-scripts --junit-path=./report.xml",
+        "test": "deno test --allow-read --allow-write --allow-net --junit-path=./report.xml",
         "llm": "bash utils/repo.sh",
         "build:npm": "deno run -A build_npm.ts"
     },
     "imports": {
         "@deno/dnt": "jsr:@deno/dnt@0.41.3",
         "@matmen/imagescript": "jsr:@matmen/imagescript@^1.3.1",
+        "@std/encoding": "jsr:@std/encoding@^1.0.10",
         "@temelj/color": "jsr:@temelj/color@^0.7.0",
         "@std/assert": "jsr:@std/assert@1.0.12",
         "@std/fs": "jsr:@std/fs@1.0.19",
