--- a/deno.json
+++ b/deno.json
@@ -13,19 +13,25 @@
         "dev": "deno run --allow-ffi --allow-read --watch src/index.ts",
         "dev:example": "deno run --allow-read --allow-write --allow-net example/main.ts",
         "tidy": "deno fmt . && deno lint src/ example/",
-        "test": "deno test --allow-read --allow-write --allow-net --junit-path=./report.xml",
         "llm": "bash utils/repo.sh",
-        "build:npm": "deno run -A build_npm.ts"
+        "build:npm": "deno run -A build_npm.ts",
+        "test": "deno test --allow-read --allow-write --allow-net --junit-path=./report.xml",
+        "test:watch": "deno test --allow-read --allow-write --watch tests/",
+        "test:coverage": "deno test --allow-read --allow-write --coverage=coverage tests/",
+        "test:transforms": "deno test --allow-read --allow-write tests/transforms/",
+        "test:utils": "deno test --allow-read --allow-write tests/utils.test.ts",
+        "test:integration": "deno test --allow-read --allow-write tests/integration.test.ts",
+        "test:performance": "deno test --allow-read --allow-write tests/performance.test.ts"
     },
     "imports": {
         "@deno/dnt": "jsr:@deno/dnt@0.41.3",
-        "@matmen/imagescript": "jsr:@matmen/imagescript@^1.3.1",
         "@std/encoding": "jsr:@std/encoding@^1.0.10",
-        "@temelj/color": "jsr:@temelj/color@^0.7.0",
         "@std/assert": "jsr:@std/assert@1.0.12",
         "@std/fs": "jsr:@std/fs@1.0.19",
         "@std/path": "jsr:@std/path@1.0.8",
         "@std/testing": "jsr:@std/testing@1.0.11",
+        "@matmen/imagescript": "jsr:@matmen/imagescript@^1.3.1",
+        "@temelj/color": "jsr:@temelj/color@^0.7.0",
         "@/": "./src/"
     },
     "publish": {
