--- a/deno.json
+++ b/deno.json
@@ -16,8 +16,7 @@
         "llm": "bash utils/repo.sh",
         "build:npm": "deno run -A build_npm.ts",
         "test": "deno test --allow-read --allow-write --allow-net --junit-path=./report.xml",
-        "test:watch": "deno test --allow-read --allow-write --watch tests/",
-        "test:coverage": "deno test --allow-read --allow-write --coverage=coverage tests/",
+        "test:coverage": "deno test --allow-read --allow-write --allow-net --coverage=coverage tests/",
         "test:transforms": "deno test --allow-read --allow-write tests/transforms/",
         "test:utils": "deno test --allow-read --allow-write tests/utils.test.ts",
         "test:integration": "deno test --allow-read --allow-write tests/integration.test.ts",
