--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,10 +1,20 @@
 name: CodeQL
 
 on:
-    workflow_dispatch:
     push:
         branches: [master]
+        paths:
+            - 'src'
+            - 'tests'
+            - 'example'
     pull_request:
+        paths:
+            - 'src'
+            - 'tests'
+            - 'example'
+    schedule:
+        - cron: '0 0 * * 1'
+    workflow_dispatch:
 
 jobs:
     analyze:
