--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -5,6 +5,7 @@ on:
         branches: [master]
     pull_request:
         branches: [master]
+    workflow_dispatch:
 
 jobs:
     test:
@@ -14,11 +15,9 @@ jobs:
             DENO_DIR: .deno_cache
 
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+            - uses: actions/checkout@v3
 
-            - name: Set up Deno
-              uses: denoland/setup-deno@v2
+            - uses: denoland/setup-deno@v2
               with:
                   deno-version: v2.x
 
@@ -30,19 +29,17 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-deno-
 
-            - name: Check formatting
-              run: deno fmt --check
+            - run: deno fmt --check
 
-            - name: Lint code
-              run: deno lint
+            - run: deno lint
 
-            - name: Run tests with coverage
-              run: deno test tests --allow-ffi --allow-read --allow-write --allow-env --allow-net --allow-run --allow-scripts --coverage=cov --junit-path=./junit.xml
+            - run: deno test --allow-read --allow-write --allow-net --coverage=cov --junit-path=./junit.xml
 
-            - name: Generate coverage report
-              run: deno coverage --lcov cov > coverage.lcov
+            - run: deno coverage --lcov cov > coverage.lcov
 
             - name: Upload test results to Codecov
+              # https://docs.github.com/en/actions/reference/workflows-and-actions/expressions#always
+              # always run this step, regardless of sucess or failure
               if: ${{ !cancelled() }}
               uses: codecov/test-results-action@v1
               with:
