--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to registry
+name: Publish to JSR and NPM
 on:
     release:
         types: [published]
@@ -13,27 +13,22 @@ jobs:
             id-token: write
 
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+            - uses: actions/checkout@v4
 
-            - name: Set env
-              run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+            - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-            - name: Setup Deno
-              uses: denoland/setup-deno@v1
+            - uses: denoland/setup-deno@v1
               with:
                   deno-version: v2.x
 
             - name: Publish to jsr
               run: deno publish
 
-            - name: Build npm package
-              run: deno run -A build_npm.ts $RELEASE_VERSION
+            - run: deno run -A build_npm.ts $RELEASE_VERSION
 
-            - name: Setup Node/npm
-              uses: actions/setup-node@v3
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 20
+                  node-version: 24
                   registry-url: 'https://registry.npmjs.org'
                   scope: '@totallynotdavid'
 
