--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -39,7 +39,7 @@ jobs:
 
             - name: Upload test results to Codecov
               # https://docs.github.com/en/actions/reference/workflows-and-actions/expressions#always
-              # always run this step, regardless of sucess or failure
+              # always run this step, regardless of success or failure
               if: ${{ !cancelled() }}
               uses: codecov/test-results-action@v1
               with:
