--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,14 +4,14 @@ on:
     push:
         branches: [master]
         paths:
-            - 'src'
-            - 'tests'
-            - 'example'
+            - 'src/**'
+            - 'tests/**'
+            - 'example/**/*.ts'
     pull_request:
         paths:
-            - 'src'
-            - 'tests'
-            - 'example'
+            - 'src/**'
+            - 'tests/**'
+            - 'example/**/*.ts'
     schedule:
         - cron: '0 0 * * 1'
     workflow_dispatch:
